# astronomia-galaxy-api

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml
apps/api/: auth.py  config.py  main.py
docker/: Dockerfile  docker-compose.gpu.yml  docker-compose.yml
docs/: ARCHITECTURE.md  README.md
notebooks/: README.md
scripts/: README.md  debug_statmorph.py  e2e_real.py  provider_probe.py  run_pipeline.py  test_resolve_and_fetch.py
tests/: test_agent_runner_viewer_gate.py  test_agent_tools.py  test_context_registry.py  test_dss2_resolution_and_client.py  test_e2e_analyze.py  test_galaxy_core.py  test_hips_strategy.py  test_langchain_catalog_parsing.py  test_simbad_and_mast_hst.py  test_survey_provider_registry.py  test_task_orchestrator_image_pipeline.py
